# ArtGallery

./: CMakeLists.txt  README.md  input.txt
include/AGP/components/interface/: edge.h  genetic_algorithm.h  guard.h  mpolygon.h  team.h
include/AGP/components/ui/: view.h
sources/: artGallery.cpp
sources/components/edge/: edge.cpp  edge.h
sources/components/genetic_algorithm/: genetic_algorithm.cpp  genetic_algorithm.h
sources/components/guard/: guard.cpp  guard.h
sources/components/mpolygon/: mpolygon.cpp  mpolygon.h
sources/components/point/: point.cpp  point.h
sources/components/team/: team.cpp  team.h
sources/components/visualize/paper/: paper.cpp  paper.h
src/: main.cpp
src/components/interface/: edge.cpp  genetic_algorithm.cpp  guard.cpp  mpolygon.cpp  point.cpp  team.cpp
src/components/ui/: view.cpp
